--- a/serverless.yml
+++ b/serverless.yml
@@ -57,6 +57,9 @@ provider:
 functions:
   hello:
     handler: handler.hello
+    events:
+      - http: ANY /
+      - http: 'ANY {proxy+}'
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
